Introduce example security vulnerability

--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -60,6 +60,7 @@ jobs:
         with:
           category: "/language:${{ matrix.language }}"
           output: ./codeql/
+          queries: ./custom-query-codeql/custom-query.ql
 
       - name: Print SARIF file
         run: |
